# vscode-foo

./: CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  README.txt  devcontainer.json
app/: CMakeLists.txt  main.cpp
libfoo/: CMakeLists.txt
libfoo/include/foo/: dllexport.h  mul.h
libfoo/src/: mul.cpp
libfoo/tests/: main.cpp  testMul.cpp
